fixed background current time overflow in player-widget

--- a/kladecytI/web/css/player-widget.css
+++ b/kladecytI/web/css/player-widget.css
@@ -146,7 +146,6 @@
     color: aliceblue;
     overflow: hidden;
     z-index: 1;
-    left: 1px;
 }
 .playerWidget .progressBar .progressBarBackgroundCurrentTime {
     color: #6796b4;
